<resources>
    <string name="app_name">걸파핼퍼</string>

    <!-- MainActivity Start -->
    <string name="application_status">어플리케이션 상태</string>
    <string name="application_permission_error">오버레이 권한 오류</string>
    <string name="application_accessibility_error">접근성 서비스 오류</string>
    <string name="application_ok">감지된 문제 없음</string>

    <string name="detect_game_title">감지된 뱅드림</string>
    <string name="garupa_korean">뱅드림 한국어</string>
    <string name="garupa_japanese">뱅드림 일본어</string>
    <string name="garupa_installed">설치 됨</string>
    <string name="garupa_not_installed">설치 안됨</string>

    <string name="today_play_time_title">기록-오늘</string>
    <string name="today_month_grass_title">기록-이번달</string>

    <string name="settings_settings">걸파핼퍼 설정</string>
    <string name="application_info">걸파핼퍼 정보</string>
    <!-- MainActivity End -->

    <!-- Settings Activity -->
    <string name="settings_general_permission">권한 설정</string>
    <string name="settings_general_access">접근성 설정</string>
    <string name="settings_general_access_summ">접근성 서비스를 확인합니다.</string>
    <string name="settings_general_overlap">오버레이 권한</string>
    <string name="settings_general_overlay_summ">오버레이 권한을 확인합니다.</string>
    <string name="settings_general_ingame">게임 설정</string>
    <string name="settings_general_ltemode">강제 LTE 사용</string>
    <string name="settings_general_ltemode_summ">LTE 만 사용하여 뱅드림을 플레이 합니다.</string>
    <string name="settings_general_display_orient">화면 고정</string>
    <string name="settings_general_display_orient_default">가로</string>
    <string-array name="general_display_orient_dirg">
        <item>가로</item>
        <item>가로 (역방향)</item>
        <item>세로</item>
        <item>세로 (역방향)</item>
    </string-array>

    <string-array name="general_display_orient_dirg_val">
        <item>0</item>
        <item>8</item>
        <item>1</item>
        <item>9</item>
    </string-array>

    <!-- Game Overlay View -->
    <string name="protector_start">걸파 핼퍼가 시작되었습니다.</string>
    <!-- GameOverlay View End-->

    <!-- Time settings pref -->
    <string name="time_settings_category">시간 설정</string>
    <string-array name="times_str">
        <item>0h 30m</item>
        <item>1h 00m</item>
        <item>1h 30m</item>
        <item>2h 00m</item>
        <item>2h 30m</item>
        <item>3h 00m</item>
        <item>3h 30m</item>
    </string-array>
    <string-array name="times_val">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
        <item>210</item>
    </string-array>


    <!-- Etc... -->
    <string-array name="garupa_packages">
        <item name="bangdream_ko">com.kakaogames.bangdreamkr</item>
        <item name="bangdream_jp">jp.co.craftegg.band</item>
    </string-array>

    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wen">수</string>
    <string name="thr">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>

    <string name="jun">1월</string>
    <string name="feb">2월</string>
    <string name="march">3월</string>
    <string name="april">4월</string>
    <string name="may">5월</string>
    <string name="june">6월</string>
    <string name="july">7월</string>
    <string name="aguest">8월</string>
    <string name="setempber">9월</string>
    <string name="oct">10월</string>
    <string name="nov">11월</string>
    <string name="dec">12월</string>

    <string name="access_description">뱅드림 실행을 감지하기 위해 권한 허용이 필요합니다.</string>

    <string name="recored_title">1년 총 플레이 시간 : </string>
    <string name="recored_1year">올해 플레이 시간 : </string>
    <string name="recored_avarge">평균 플레이 시간 : </string>
    <string name="recored_long_time">가장 오래 플레이 한 시간 : </string>
    <string name="recored_long_day">가장 오래 플레이 한 날짜 : </string>
</resources>
