<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grass_title"
        android:text="@string/jun"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp" />
    <GridLayout
        android:id="@+id/grass_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/grass_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/sun"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/mon"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/tue"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/wen"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/thr"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/fri"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/sat"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>
    </GridLayout>
</android.support.constraint.ConstraintLayout>