<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <TableRow>
            <TextView
                android:text="@string/recored_1year"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/recored_1year_data"
                android:text="undefined"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/recored_avarge"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/recored_avarge_data"
                android:text="undefined"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/recored_long_time"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/recored_long_date_data"
                android:text="undefined"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/recored_long_time"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/recored_long_time_data"
                android:text="undefined"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">
        <kr.saintdev.bandhelp.views.lib.GithubGrass
            android:id="@+id/grass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:start_month="1"
            app:end_month="12"
            app:orient="horizontal"/>
    </ScrollView>
</LinearLayout>